// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAstryxTheme mit Register > hält die Tokens von kontaktbogen stabil 1`] = `
{
  "--color-accent": "light-dark(#BB1714, #FFB3A2)",
  "--color-accent-muted": "light-dark(color-mix(in srgb, var(--color-accent) 20%, transparent), color-mix(in srgb, var(--color-accent) 25%, transparent))",
  "--color-background-blue": "light-dark(#c4ddfb, #9eb7ff3D)",
  "--color-background-body": "light-dark(#e4e1d6, #191814)",
  "--color-background-card": "light-dark(#edeae1, #211f1a)",
  "--color-background-cyan": "light-dark(#a3e0ef, #83c2d43D)",
  "--color-background-gray": "light-dark(#e5e5e5, var(--color-neutral))",
  "--color-background-green": "light-dark(#c5e5c0, #84c9803D)",
  "--color-background-inverted": "light-dark(#221918, #FFFBF9)",
  "--color-background-muted": "light-dark(#2219180D, #22191880)",
  "--color-background-orange": "light-dark(#fad0b5, #ffa2583D)",
  "--color-background-pink": "light-dark(#fccadc, #ff99c33D)",
  "--color-background-popover": "light-dark(#FFFBF9, #382E2C)",
  "--color-background-purple": "light-dark(#eccef3, #f297ff3D)",
  "--color-background-red": "light-dark(#facecb, #ff9e973D)",
  "--color-background-surface": "light-dark(#edeae1, #211f1a)",
  "--color-background-teal": "light-dark(#a5e3d6, #7ec6b83D)",
  "--color-background-yellow": "light-dark(#f8da9d, #deb4333D)",
  "--color-border": "light-dark(#2219181A, #FBEEEB1A)",
  "--color-border-blue": "light-dark(#b1c9e7, #6d9cfe)",
  "--color-border-cyan": "light-dark(#91d3e3, #67a7b8)",
  "--color-border-emphasized": "light-dark(#BBA7A3, #53433F)",
  "--color-border-gray": "light-dark(#d4d4d4, #262626)",
  "--color-border-green": "light-dark(#b2d1ac, #69ad67)",
  "--color-border-orange": "light-dark(#e6bda2, #e2883e)",
  "--color-border-pink": "light-dark(#e7b7c8, #f273aa)",
  "--color-border-purple": "light-dark(#d8bbdf, #dd74f0)",
  "--color-border-red": "light-dark(#e6bab8, #ff6f6c)",
  "--color-border-teal": "light-dark(#94d6c8, #63ab9d)",
  "--color-border-yellow": "light-dark(#e4c279, #c0990e)",
  "--color-brand-secondary": "#14130f",
  "--color-error": "light-dark(#a50c25, #ffc6c1)",
  "--color-error-muted": "light-dark(#facecb, #ff9e973D)",
  "--color-icon-accent": "var(--color-accent)",
  "--color-icon-blue": "light-dark(#00458c, #9eb7ff)",
  "--color-icon-cyan": "light-dark(#00505f, #83c2d4)",
  "--color-icon-disabled": "light-dark(#9F8D88, #6C5A57)",
  "--color-icon-gray": "light-dark(#525252, #a3a3a3)",
  "--color-icon-green": "light-dark(#0c5700, #84c980)",
  "--color-icon-orange": "light-dark(#6e3500, #ffa258)",
  "--color-icon-pink": "light-dark(#83004b, #ff99c3)",
  "--color-icon-primary": "light-dark(#221918, #EDE0DD)",
  "--color-icon-purple": "light-dark(#700084, #f297ff)",
  "--color-icon-red": "light-dark(#89001a, #ff9e97)",
  "--color-icon-secondary": "light-dark(#53433F, #BBA7A3)",
  "--color-icon-teal": "light-dark(#005348, #7ec6b8)",
  "--color-icon-yellow": "light-dark(#584400, #deb433)",
  "--color-neutral": "light-dark(#2219181A, #EDE0DD33)",
  "--color-on-accent": "light-dark(#FFFFFF, #7D0000)",
  "--color-on-dark": "#ffffff",
  "--color-on-error": "light-dark(#ffffff, #171717)",
  "--color-on-light": "#171717",
  "--color-on-success": "light-dark(#ffffff, #171717)",
  "--color-on-warning": "#171717",
  "--color-overlay": "light-dark(#22191866, #22191899)",
  "--color-overlay-hover": "light-dark(#2219180D, #FFFFFF0D)",
  "--color-overlay-pressed": "light-dark(#2219181A, #FFFFFF1A)",
  "--color-shadow": "light-dark(#0000001A, #0000004D)",
  "--color-skeleton": "light-dark(#BBA7A3, #53433F)",
  "--color-success": "light-dark(#007004, #9fe59b)",
  "--color-success-muted": "light-dark(#c5e5c0, #84c9803D)",
  "--color-syntax-attribute": "light-dark(#584400, #eec12f)",
  "--color-syntax-background": "light-dark(#fafafa, #0a0a0a)",
  "--color-syntax-comment": "light-dark(#737373, #a3a3a3)",
  "--color-syntax-constant": "light-dark(#6e3500, #ffb37f)",
  "--color-syntax-function": "light-dark(#00458c, #a0caff)",
  "--color-syntax-keyword": "light-dark(#700084, #efa8ff)",
  "--color-syntax-number": "light-dark(#6e3500, #ffb37f)",
  "--color-syntax-operator": "light-dark(#737373, #a3a3a3)",
  "--color-syntax-property": "light-dark(#005348, #83dac9)",
  "--color-syntax-punctuation": "light-dark(#a3a3a3, #525252)",
  "--color-syntax-string": "light-dark(#005600, #a6d2a2)",
  "--color-syntax-tag": "light-dark(#89001a, #ffaeaa)",
  "--color-syntax-type": "light-dark(#700084, #efa8ff)",
  "--color-syntax-variable": "light-dark(#171717, #e5e5e5)",
  "--color-text-accent": "var(--color-accent)",
  "--color-text-blue": "light-dark(#00458c, #c7d3ff)",
  "--color-text-cyan": "light-dark(#00505f, #9edef0)",
  "--color-text-disabled": "light-dark(#9F8D88, #6C5A57)",
  "--color-text-gray": "light-dark(#262626, #e5e5e5)",
  "--color-text-green": "light-dark(#0c5700, #9fe59b)",
  "--color-text-orange": "light-dark(#6e3500, #ffc9a2)",
  "--color-text-pink": "light-dark(#83004b, #ffc3da)",
  "--color-text-primary": "light-dark(#221918, #EDE0DD)",
  "--color-text-purple": "light-dark(#700084, #fac1ff)",
  "--color-text-red": "light-dark(#89001a, #ffc6c1)",
  "--color-text-secondary": "light-dark(#53433F, #BBA7A3)",
  "--color-text-teal": "light-dark(#005348, #99e2d3)",
  "--color-text-yellow": "light-dark(#584400, #fdcf4f)",
  "--color-tint-hover": "light-dark(black, white)",
  "--color-track": "light-dark(#BBA7A3, #53433F)",
  "--color-warning": "light-dark(#745b00, #fdcf4f)",
  "--color-warning-muted": "light-dark(#f8da9d, #deb4333D)",
  "--duration-fast": "125ms",
  "--duration-fast-max": "165ms",
  "--duration-fast-min": "95ms",
  "--duration-medium": "300ms",
  "--duration-medium-max": "400ms",
  "--duration-medium-min": "225ms",
  "--duration-slow": "700ms",
  "--duration-slow-max": "935ms",
  "--duration-slow-min": "525ms",
  "--font-family-body": ""Public Sans", "Helvetica", "Arial", sans-serif",
  "--font-family-code": ""Martian Mono", ui-monospace, "Menlo", monospace",
  "--font-family-heading": ""Familjen Grotesk", "Helvetica", "Arial", sans-serif",
  "--font-size-2xl": "1.5rem",
  "--font-size-2xs": "0.5rem",
  "--font-size-3xl": "1.8125rem",
  "--font-size-3xs": "0.4375rem",
  "--font-size-4xl": "2.1875rem",
  "--font-size-4xs": "0.375rem",
  "--font-size-5xl": "2.625rem",
  "--font-size-base": "0.875rem",
  "--font-size-lg": "1.0625rem",
  "--font-size-sm": "0.75rem",
  "--font-size-xl": "1.25rem",
  "--font-size-xs": "0.625rem",
  "--radius-container": "0px",
  "--radius-element": "0px",
  "--radius-full": "9999px",
  "--radius-inner": "0.375rem",
  "--radius-none": "0.25rem",
  "--radius-page": "1.75rem",
  "--shadow-high": "0 4px 6px light-dark(oklch(0 0 0 / 10%), oklch(0 0 0 / 50%)), 0 12px 24px light-dark(oklch(0 0 0 / 15%), oklch(0 0 0 / 70%)), inset 0 0 0 1px light-dark(transparent, oklch(1 0 0 / 15%))",
  "--shadow-inset-error": "inset 0px 0px 0px 2px #e33f4a4D",
  "--shadow-inset-hover": "inset 0px 0px 0px 2px #0074e24D",
  "--shadow-inset-selected": "inset 0px 0px 0px 2px #0074e280",
  "--shadow-inset-success": "inset 0px 0px 0px 2px #1981004D",
  "--shadow-inset-warning": "inset 0px 0px 0px 2px #ffce2f4D",
  "--shadow-low": "0 2px 4px light-dark(oklch(0 0 0 / 5%), oklch(0 0 0 / 25%)), 0 4px 8px light-dark(oklch(0 0 0 / 10%), oklch(0 0 0 / 40%)), inset 0 0 0 1px light-dark(transparent, oklch(1 0 0 / 8%))",
  "--shadow-med": "0 2px 4px light-dark(oklch(0 0 0 / 5%), oklch(0 0 0 / 35%)), 0 4px 12px light-dark(oklch(0 0 0 / 10%), oklch(0 0 0 / 50%)), inset 0 0 0 1px light-dark(transparent, oklch(1 0 0 / 12%))",
  "--text-body-leading": "1.4286",
  "--text-body-size": "var(--font-size-base)",
  "--text-body-weight": "var(--font-weight-normal)",
  "--text-code-leading": "1.4286",
  "--text-code-size": "var(--font-size-base)",
  "--text-code-weight": "var(--font-weight-normal)",
  "--text-display-1-leading": "1.2381",
  "--text-display-1-size": "var(--font-size-5xl)",
  "--text-display-1-weight": "var(--font-weight-normal)",
  "--text-display-2-leading": "1.2571",
  "--text-display-2-size": "var(--font-size-4xl)",
  "--text-display-2-weight": "var(--font-weight-normal)",
  "--text-display-3-leading": "1.3793",
  "--text-display-3-size": "var(--font-size-3xl)",
  "--text-display-3-weight": "var(--font-weight-normal)",
  "--text-heading-1-leading": "1.3333",
  "--text-heading-1-size": "var(--font-size-2xl)",
  "--text-heading-1-weight": "var(--font-weight-semibold)",
  "--text-heading-2-leading": "1.4",
  "--text-heading-2-size": "var(--font-size-xl)",
  "--text-heading-2-weight": "var(--font-weight-semibold)",
  "--text-heading-3-leading": "1.4118",
  "--text-heading-3-size": "var(--font-size-lg)",
  "--text-heading-3-weight": "var(--font-weight-bold)",
  "--text-heading-4-leading": "1.4286",
  "--text-heading-4-size": "var(--font-size-base)",
  "--text-heading-4-weight": "var(--font-weight-bold)",
  "--text-heading-5-leading": "1.6667",
  "--text-heading-5-size": "var(--font-size-sm)",
  "--text-heading-5-weight": "var(--font-weight-semibold)",
  "--text-heading-6-leading": "1.6",
  "--text-heading-6-size": "var(--font-size-xs)",
  "--text-heading-6-weight": "var(--font-weight-semibold)",
  "--text-label-leading": "1.4286",
  "--text-label-size": "var(--font-size-base)",
  "--text-label-weight": "var(--font-weight-medium)",
  "--text-large-leading": "1.4118",
  "--text-large-size": "var(--font-size-lg)",
  "--text-large-weight": "var(--font-weight-semibold)",
  "--text-supporting-leading": "1.6667",
  "--text-supporting-size": "var(--font-size-sm)",
  "--text-supporting-weight": "var(--font-weight-normal)",
}
`;

exports[`buildAstryxTheme mit Register > hält die Tokens von passepartout stabil 1`] = `
{
  "--color-accent": "light-dark(#BB1714, #FFB3A2)",
  "--color-accent-muted": "light-dark(color-mix(in srgb, var(--color-accent) 20%, transparent), color-mix(in srgb, var(--color-accent) 25%, transparent))",
  "--color-background-blue": "light-dark(#c4ddfb, #9eb7ff3D)",
  "--color-background-body": "light-dark(#dfdcd4, #1c1a17)",
  "--color-background-card": "light-dark(#ece9e1, #242119)",
  "--color-background-cyan": "light-dark(#a3e0ef, #83c2d43D)",
  "--color-background-gray": "light-dark(#e5e5e5, var(--color-neutral))",
  "--color-background-green": "light-dark(#c5e5c0, #84c9803D)",
  "--color-background-inverted": "light-dark(#221918, #FFFBF9)",
  "--color-background-muted": "light-dark(#2219180D, #22191880)",
  "--color-background-orange": "light-dark(#fad0b5, #ffa2583D)",
  "--color-background-pink": "light-dark(#fccadc, #ff99c33D)",
  "--color-background-popover": "light-dark(#FFFBF9, #382E2C)",
  "--color-background-purple": "light-dark(#eccef3, #f297ff3D)",
  "--color-background-red": "light-dark(#facecb, #ff9e973D)",
  "--color-background-surface": "light-dark(#ece9e1, #242119)",
  "--color-background-teal": "light-dark(#a5e3d6, #7ec6b83D)",
  "--color-background-yellow": "light-dark(#f8da9d, #deb4333D)",
  "--color-border": "light-dark(#2219181A, #FBEEEB1A)",
  "--color-border-blue": "light-dark(#b1c9e7, #6d9cfe)",
  "--color-border-cyan": "light-dark(#91d3e3, #67a7b8)",
  "--color-border-emphasized": "light-dark(#BBA7A3, #53433F)",
  "--color-border-gray": "light-dark(#d4d4d4, #262626)",
  "--color-border-green": "light-dark(#b2d1ac, #69ad67)",
  "--color-border-orange": "light-dark(#e6bda2, #e2883e)",
  "--color-border-pink": "light-dark(#e7b7c8, #f273aa)",
  "--color-border-purple": "light-dark(#d8bbdf, #dd74f0)",
  "--color-border-red": "light-dark(#e6bab8, #ff6f6c)",
  "--color-border-teal": "light-dark(#94d6c8, #63ab9d)",
  "--color-border-yellow": "light-dark(#e4c279, #c0990e)",
  "--color-brand-secondary": "#14130f",
  "--color-error": "light-dark(#a50c25, #ffc6c1)",
  "--color-error-muted": "light-dark(#facecb, #ff9e973D)",
  "--color-icon-accent": "var(--color-accent)",
  "--color-icon-blue": "light-dark(#00458c, #9eb7ff)",
  "--color-icon-cyan": "light-dark(#00505f, #83c2d4)",
  "--color-icon-disabled": "light-dark(#9F8D88, #6C5A57)",
  "--color-icon-gray": "light-dark(#525252, #a3a3a3)",
  "--color-icon-green": "light-dark(#0c5700, #84c980)",
  "--color-icon-orange": "light-dark(#6e3500, #ffa258)",
  "--color-icon-pink": "light-dark(#83004b, #ff99c3)",
  "--color-icon-primary": "light-dark(#221918, #EDE0DD)",
  "--color-icon-purple": "light-dark(#700084, #f297ff)",
  "--color-icon-red": "light-dark(#89001a, #ff9e97)",
  "--color-icon-secondary": "light-dark(#53433F, #BBA7A3)",
  "--color-icon-teal": "light-dark(#005348, #7ec6b8)",
  "--color-icon-yellow": "light-dark(#584400, #deb433)",
  "--color-neutral": "light-dark(#2219181A, #EDE0DD33)",
  "--color-on-accent": "light-dark(#FFFFFF, #7D0000)",
  "--color-on-dark": "#ffffff",
  "--color-on-error": "light-dark(#ffffff, #171717)",
  "--color-on-light": "#171717",
  "--color-on-success": "light-dark(#ffffff, #171717)",
  "--color-on-warning": "#171717",
  "--color-overlay": "light-dark(#22191866, #22191899)",
  "--color-overlay-hover": "light-dark(#2219180D, #FFFFFF0D)",
  "--color-overlay-pressed": "light-dark(#2219181A, #FFFFFF1A)",
  "--color-shadow": "light-dark(#0000001A, #0000004D)",
  "--color-skeleton": "light-dark(#BBA7A3, #53433F)",
  "--color-success": "light-dark(#007004, #9fe59b)",
  "--color-success-muted": "light-dark(#c5e5c0, #84c9803D)",
  "--color-syntax-attribute": "light-dark(#584400, #eec12f)",
  "--color-syntax-background": "light-dark(#fafafa, #0a0a0a)",
  "--color-syntax-comment": "light-dark(#737373, #a3a3a3)",
  "--color-syntax-constant": "light-dark(#6e3500, #ffb37f)",
  "--color-syntax-function": "light-dark(#00458c, #a0caff)",
  "--color-syntax-keyword": "light-dark(#700084, #efa8ff)",
  "--color-syntax-number": "light-dark(#6e3500, #ffb37f)",
  "--color-syntax-operator": "light-dark(#737373, #a3a3a3)",
  "--color-syntax-property": "light-dark(#005348, #83dac9)",
  "--color-syntax-punctuation": "light-dark(#a3a3a3, #525252)",
  "--color-syntax-string": "light-dark(#005600, #a6d2a2)",
  "--color-syntax-tag": "light-dark(#89001a, #ffaeaa)",
  "--color-syntax-type": "light-dark(#700084, #efa8ff)",
  "--color-syntax-variable": "light-dark(#171717, #e5e5e5)",
  "--color-text-accent": "var(--color-accent)",
  "--color-text-blue": "light-dark(#00458c, #c7d3ff)",
  "--color-text-cyan": "light-dark(#00505f, #9edef0)",
  "--color-text-disabled": "light-dark(#9F8D88, #6C5A57)",
  "--color-text-gray": "light-dark(#262626, #e5e5e5)",
  "--color-text-green": "light-dark(#0c5700, #9fe59b)",
  "--color-text-orange": "light-dark(#6e3500, #ffc9a2)",
  "--color-text-pink": "light-dark(#83004b, #ffc3da)",
  "--color-text-primary": "light-dark(#221918, #EDE0DD)",
  "--color-text-purple": "light-dark(#700084, #fac1ff)",
  "--color-text-red": "light-dark(#89001a, #ffc6c1)",
  "--color-text-secondary": "light-dark(#53433F, #BBA7A3)",
  "--color-text-teal": "light-dark(#005348, #99e2d3)",
  "--color-text-yellow": "light-dark(#584400, #fdcf4f)",
  "--color-tint-hover": "light-dark(black, white)",
  "--color-track": "light-dark(#BBA7A3, #53433F)",
  "--color-warning": "light-dark(#745b00, #fdcf4f)",
  "--color-warning-muted": "light-dark(#f8da9d, #deb4333D)",
  "--duration-fast": "125ms",
  "--duration-fast-max": "165ms",
  "--duration-fast-min": "95ms",
  "--duration-medium": "300ms",
  "--duration-medium-max": "400ms",
  "--duration-medium-min": "225ms",
  "--duration-slow": "700ms",
  "--duration-slow-max": "935ms",
  "--duration-slow-min": "525ms",
  "--font-family-body": "Newsreader, "Georgia", serif",
  "--font-family-code": ""Public Sans", "Helvetica", "Arial", sans-serif",
  "--font-family-heading": ""Instrument Serif", "Georgia", serif",
  "--font-size-2xl": "1.5rem",
  "--font-size-2xs": "0.5rem",
  "--font-size-3xl": "1.8125rem",
  "--font-size-3xs": "0.4375rem",
  "--font-size-4xl": "2.1875rem",
  "--font-size-4xs": "0.375rem",
  "--font-size-5xl": "2.625rem",
  "--font-size-base": "0.875rem",
  "--font-size-lg": "1.0625rem",
  "--font-size-sm": "0.75rem",
  "--font-size-xl": "1.25rem",
  "--font-size-xs": "0.625rem",
  "--radius-container": "0px",
  "--radius-element": "0px",
  "--radius-full": "9999px",
  "--radius-inner": "0.375rem",
  "--radius-none": "0.25rem",
  "--radius-page": "1.75rem",
  "--shadow-high": "0 4px 6px light-dark(oklch(0 0 0 / 10%), oklch(0 0 0 / 50%)), 0 12px 24px light-dark(oklch(0 0 0 / 15%), oklch(0 0 0 / 70%)), inset 0 0 0 1px light-dark(transparent, oklch(1 0 0 / 15%))",
  "--shadow-inset-error": "inset 0px 0px 0px 2px #e33f4a4D",
  "--shadow-inset-hover": "inset 0px 0px 0px 2px #0074e24D",
  "--shadow-inset-selected": "inset 0px 0px 0px 2px #0074e280",
  "--shadow-inset-success": "inset 0px 0px 0px 2px #1981004D",
  "--shadow-inset-warning": "inset 0px 0px 0px 2px #ffce2f4D",
  "--shadow-low": "0 2px 4px light-dark(oklch(0 0 0 / 5%), oklch(0 0 0 / 25%)), 0 4px 8px light-dark(oklch(0 0 0 / 10%), oklch(0 0 0 / 40%)), inset 0 0 0 1px light-dark(transparent, oklch(1 0 0 / 8%))",
  "--shadow-med": "0 2px 4px light-dark(oklch(0 0 0 / 5%), oklch(0 0 0 / 35%)), 0 4px 12px light-dark(oklch(0 0 0 / 10%), oklch(0 0 0 / 50%)), inset 0 0 0 1px light-dark(transparent, oklch(1 0 0 / 12%))",
  "--text-body-leading": "1.4286",
  "--text-body-size": "var(--font-size-base)",
  "--text-body-weight": "var(--font-weight-normal)",
  "--text-code-leading": "1.4286",
  "--text-code-size": "var(--font-size-base)",
  "--text-code-weight": "var(--font-weight-normal)",
  "--text-display-1-leading": "1.2381",
  "--text-display-1-size": "var(--font-size-5xl)",
  "--text-display-1-weight": "var(--font-weight-normal)",
  "--text-display-2-leading": "1.2571",
  "--text-display-2-size": "var(--font-size-4xl)",
  "--text-display-2-weight": "var(--font-weight-normal)",
  "--text-display-3-leading": "1.3793",
  "--text-display-3-size": "var(--font-size-3xl)",
  "--text-display-3-weight": "var(--font-weight-normal)",
  "--text-heading-1-leading": "1.3333",
  "--text-heading-1-size": "var(--font-size-2xl)",
  "--text-heading-1-weight": "var(--font-weight-semibold)",
  "--text-heading-2-leading": "1.4",
  "--text-heading-2-size": "var(--font-size-xl)",
  "--text-heading-2-weight": "var(--font-weight-semibold)",
  "--text-heading-3-leading": "1.4118",
  "--text-heading-3-size": "var(--font-size-lg)",
  "--text-heading-3-weight": "var(--font-weight-bold)",
  "--text-heading-4-leading": "1.4286",
  "--text-heading-4-size": "var(--font-size-base)",
  "--text-heading-4-weight": "var(--font-weight-bold)",
  "--text-heading-5-leading": "1.6667",
  "--text-heading-5-size": "var(--font-size-sm)",
  "--text-heading-5-weight": "var(--font-weight-semibold)",
  "--text-heading-6-leading": "1.6",
  "--text-heading-6-size": "var(--font-size-xs)",
  "--text-heading-6-weight": "var(--font-weight-semibold)",
  "--text-label-leading": "1.4286",
  "--text-label-size": "var(--font-size-base)",
  "--text-label-weight": "var(--font-weight-medium)",
  "--text-large-leading": "1.4118",
  "--text-large-size": "var(--font-size-lg)",
  "--text-large-weight": "var(--font-weight-semibold)",
  "--text-supporting-leading": "1.6667",
  "--text-supporting-size": "var(--font-size-sm)",
  "--text-supporting-weight": "var(--font-weight-normal)",
}
`;

exports[`buildAstryxTheme mit Register > hält die Tokens von riss stabil 1`] = `
{
  "--color-accent": "light-dark(#BB1714, #FFB3A2)",
  "--color-accent-muted": "light-dark(color-mix(in srgb, var(--color-accent) 20%, transparent), color-mix(in srgb, var(--color-accent) 25%, transparent))",
  "--color-background-blue": "light-dark(#c4ddfb, #9eb7ff3D)",
  "--color-background-body": "light-dark(#dfe7eb, #0d3550)",
  "--color-background-card": "light-dark(#e9eef1, #0f3d5c)",
  "--color-background-cyan": "light-dark(#a3e0ef, #83c2d43D)",
  "--color-background-gray": "light-dark(#e5e5e5, var(--color-neutral))",
  "--color-background-green": "light-dark(#c5e5c0, #84c9803D)",
  "--color-background-inverted": "light-dark(#221918, #FFFBF9)",
  "--color-background-muted": "light-dark(#2219180D, #22191880)",
  "--color-background-orange": "light-dark(#fad0b5, #ffa2583D)",
  "--color-background-pink": "light-dark(#fccadc, #ff99c33D)",
  "--color-background-popover": "light-dark(#FFFBF9, #382E2C)",
  "--color-background-purple": "light-dark(#eccef3, #f297ff3D)",
  "--color-background-red": "light-dark(#facecb, #ff9e973D)",
  "--color-background-surface": "light-dark(#e9eef1, #0f3d5c)",
  "--color-background-teal": "light-dark(#a5e3d6, #7ec6b83D)",
  "--color-background-yellow": "light-dark(#f8da9d, #deb4333D)",
  "--color-border": "light-dark(#2219181A, #FBEEEB1A)",
  "--color-border-blue": "light-dark(#b1c9e7, #6d9cfe)",
  "--color-border-cyan": "light-dark(#91d3e3, #67a7b8)",
  "--color-border-emphasized": "light-dark(#BBA7A3, #53433F)",
  "--color-border-gray": "light-dark(#d4d4d4, #262626)",
  "--color-border-green": "light-dark(#b2d1ac, #69ad67)",
  "--color-border-orange": "light-dark(#e6bda2, #e2883e)",
  "--color-border-pink": "light-dark(#e7b7c8, #f273aa)",
  "--color-border-purple": "light-dark(#d8bbdf, #dd74f0)",
  "--color-border-red": "light-dark(#e6bab8, #ff6f6c)",
  "--color-border-teal": "light-dark(#94d6c8, #63ab9d)",
  "--color-border-yellow": "light-dark(#e4c279, #c0990e)",
  "--color-brand-secondary": "#14130f",
  "--color-error": "light-dark(#a50c25, #ffc6c1)",
  "--color-error-muted": "light-dark(#facecb, #ff9e973D)",
  "--color-icon-accent": "var(--color-accent)",
  "--color-icon-blue": "light-dark(#00458c, #9eb7ff)",
  "--color-icon-cyan": "light-dark(#00505f, #83c2d4)",
  "--color-icon-disabled": "light-dark(#9F8D88, #6C5A57)",
  "--color-icon-gray": "light-dark(#525252, #a3a3a3)",
  "--color-icon-green": "light-dark(#0c5700, #84c980)",
  "--color-icon-orange": "light-dark(#6e3500, #ffa258)",
  "--color-icon-pink": "light-dark(#83004b, #ff99c3)",
  "--color-icon-primary": "light-dark(#221918, #EDE0DD)",
  "--color-icon-purple": "light-dark(#700084, #f297ff)",
  "--color-icon-red": "light-dark(#89001a, #ff9e97)",
  "--color-icon-secondary": "light-dark(#53433F, #BBA7A3)",
  "--color-icon-teal": "light-dark(#005348, #7ec6b8)",
  "--color-icon-yellow": "light-dark(#584400, #deb433)",
  "--color-neutral": "light-dark(#2219181A, #EDE0DD33)",
  "--color-on-accent": "light-dark(#FFFFFF, #7D0000)",
  "--color-on-dark": "#ffffff",
  "--color-on-error": "light-dark(#ffffff, #171717)",
  "--color-on-light": "#171717",
  "--color-on-success": "light-dark(#ffffff, #171717)",
  "--color-on-warning": "#171717",
  "--color-overlay": "light-dark(#22191866, #22191899)",
  "--color-overlay-hover": "light-dark(#2219180D, #FFFFFF0D)",
  "--color-overlay-pressed": "light-dark(#2219181A, #FFFFFF1A)",
  "--color-shadow": "light-dark(#0000001A, #0000004D)",
  "--color-skeleton": "light-dark(#BBA7A3, #53433F)",
  "--color-success": "light-dark(#007004, #9fe59b)",
  "--color-success-muted": "light-dark(#c5e5c0, #84c9803D)",
  "--color-syntax-attribute": "light-dark(#584400, #eec12f)",
  "--color-syntax-background": "light-dark(#fafafa, #0a0a0a)",
  "--color-syntax-comment": "light-dark(#737373, #a3a3a3)",
  "--color-syntax-constant": "light-dark(#6e3500, #ffb37f)",
  "--color-syntax-function": "light-dark(#00458c, #a0caff)",
  "--color-syntax-keyword": "light-dark(#700084, #efa8ff)",
  "--color-syntax-number": "light-dark(#6e3500, #ffb37f)",
  "--color-syntax-operator": "light-dark(#737373, #a3a3a3)",
  "--color-syntax-property": "light-dark(#005348, #83dac9)",
  "--color-syntax-punctuation": "light-dark(#a3a3a3, #525252)",
  "--color-syntax-string": "light-dark(#005600, #a6d2a2)",
  "--color-syntax-tag": "light-dark(#89001a, #ffaeaa)",
  "--color-syntax-type": "light-dark(#700084, #efa8ff)",
  "--color-syntax-variable": "light-dark(#171717, #e5e5e5)",
  "--color-text-accent": "var(--color-accent)",
  "--color-text-blue": "light-dark(#00458c, #c7d3ff)",
  "--color-text-cyan": "light-dark(#00505f, #9edef0)",
  "--color-text-disabled": "light-dark(#9F8D88, #6C5A57)",
  "--color-text-gray": "light-dark(#262626, #e5e5e5)",
  "--color-text-green": "light-dark(#0c5700, #9fe59b)",
  "--color-text-orange": "light-dark(#6e3500, #ffc9a2)",
  "--color-text-pink": "light-dark(#83004b, #ffc3da)",
  "--color-text-primary": "light-dark(#221918, #EDE0DD)",
  "--color-text-purple": "light-dark(#700084, #fac1ff)",
  "--color-text-red": "light-dark(#89001a, #ffc6c1)",
  "--color-text-secondary": "light-dark(#53433F, #BBA7A3)",
  "--color-text-teal": "light-dark(#005348, #99e2d3)",
  "--color-text-yellow": "light-dark(#584400, #fdcf4f)",
  "--color-tint-hover": "light-dark(black, white)",
  "--color-track": "light-dark(#BBA7A3, #53433F)",
  "--color-warning": "light-dark(#745b00, #fdcf4f)",
  "--color-warning-muted": "light-dark(#f8da9d, #deb4333D)",
  "--duration-fast": "125ms",
  "--duration-fast-max": "165ms",
  "--duration-fast-min": "95ms",
  "--duration-medium": "300ms",
  "--duration-medium-max": "400ms",
  "--duration-medium-min": "225ms",
  "--duration-slow": "700ms",
  "--duration-slow-max": "935ms",
  "--duration-slow-min": "525ms",
  "--font-family-body": ""Public Sans", "Helvetica", "Arial", sans-serif",
  "--font-family-code": ""Martian Mono", ui-monospace, "Menlo", monospace",
  "--font-family-heading": ""Familjen Grotesk", "Helvetica", "Arial", sans-serif",
  "--font-size-2xl": "1.5rem",
  "--font-size-2xs": "0.5rem",
  "--font-size-3xl": "1.8125rem",
  "--font-size-3xs": "0.4375rem",
  "--font-size-4xl": "2.1875rem",
  "--font-size-4xs": "0.375rem",
  "--font-size-5xl": "2.625rem",
  "--font-size-base": "0.875rem",
  "--font-size-lg": "1.0625rem",
  "--font-size-sm": "0.75rem",
  "--font-size-xl": "1.25rem",
  "--font-size-xs": "0.625rem",
  "--radius-container": "0px",
  "--radius-element": "0px",
  "--radius-full": "9999px",
  "--radius-inner": "0.375rem",
  "--radius-none": "0.25rem",
  "--radius-page": "1.75rem",
  "--shadow-high": "0 4px 6px light-dark(oklch(0 0 0 / 10%), oklch(0 0 0 / 50%)), 0 12px 24px light-dark(oklch(0 0 0 / 15%), oklch(0 0 0 / 70%)), inset 0 0 0 1px light-dark(transparent, oklch(1 0 0 / 15%))",
  "--shadow-inset-error": "inset 0px 0px 0px 2px #e33f4a4D",
  "--shadow-inset-hover": "inset 0px 0px 0px 2px #0074e24D",
  "--shadow-inset-selected": "inset 0px 0px 0px 2px #0074e280",
  "--shadow-inset-success": "inset 0px 0px 0px 2px #1981004D",
  "--shadow-inset-warning": "inset 0px 0px 0px 2px #ffce2f4D",
  "--shadow-low": "0 2px 4px light-dark(oklch(0 0 0 / 5%), oklch(0 0 0 / 25%)), 0 4px 8px light-dark(oklch(0 0 0 / 10%), oklch(0 0 0 / 40%)), inset 0 0 0 1px light-dark(transparent, oklch(1 0 0 / 8%))",
  "--shadow-med": "0 2px 4px light-dark(oklch(0 0 0 / 5%), oklch(0 0 0 / 35%)), 0 4px 12px light-dark(oklch(0 0 0 / 10%), oklch(0 0 0 / 50%)), inset 0 0 0 1px light-dark(transparent, oklch(1 0 0 / 12%))",
  "--text-body-leading": "1.4286",
  "--text-body-size": "var(--font-size-base)",
  "--text-body-weight": "var(--font-weight-normal)",
  "--text-code-leading": "1.4286",
  "--text-code-size": "var(--font-size-base)",
  "--text-code-weight": "var(--font-weight-normal)",
  "--text-display-1-leading": "1.2381",
  "--text-display-1-size": "var(--font-size-5xl)",
  "--text-display-1-weight": "var(--font-weight-normal)",
  "--text-display-2-leading": "1.2571",
  "--text-display-2-size": "var(--font-size-4xl)",
  "--text-display-2-weight": "var(--font-weight-normal)",
  "--text-display-3-leading": "1.3793",
  "--text-display-3-size": "var(--font-size-3xl)",
  "--text-display-3-weight": "var(--font-weight-normal)",
  "--text-heading-1-leading": "1.3333",
  "--text-heading-1-size": "var(--font-size-2xl)",
  "--text-heading-1-weight": "var(--font-weight-semibold)",
  "--text-heading-2-leading": "1.4",
  "--text-heading-2-size": "var(--font-size-xl)",
  "--text-heading-2-weight": "var(--font-weight-semibold)",
  "--text-heading-3-leading": "1.4118",
  "--text-heading-3-size": "var(--font-size-lg)",
  "--text-heading-3-weight": "var(--font-weight-bold)",
  "--text-heading-4-leading": "1.4286",
  "--text-heading-4-size": "var(--font-size-base)",
  "--text-heading-4-weight": "var(--font-weight-bold)",
  "--text-heading-5-leading": "1.6667",
  "--text-heading-5-size": "var(--font-size-sm)",
  "--text-heading-5-weight": "var(--font-weight-semibold)",
  "--text-heading-6-leading": "1.6",
  "--text-heading-6-size": "var(--font-size-xs)",
  "--text-heading-6-weight": "var(--font-weight-semibold)",
  "--text-label-leading": "1.4286",
  "--text-label-size": "var(--font-size-base)",
  "--text-label-weight": "var(--font-weight-medium)",
  "--text-large-leading": "1.4118",
  "--text-large-size": "var(--font-size-lg)",
  "--text-large-weight": "var(--font-weight-semibold)",
  "--text-supporting-leading": "1.6667",
  "--text-supporting-size": "var(--font-size-sm)",
  "--text-supporting-weight": "var(--font-weight-normal)",
}
`;
